CHATS_SIT/force-app/main/default/objects/Field_Utility__c.object
<CustomObject>
    <fields>
        <fullName>Case_Reopen_Reason__c</fullName>
        <label>Case Reopen Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>WER</fullName>
                    <label>Agency Error</label>
                </value>
                <value>
                    <fullName>APL</fullName>
                    <label>Appeal</label>
                </value>
                <value>
                    <fullName>VER</fullName>
                    <label>Application Verification Returned</label>
                </value>
                <value>
                    <fullName>CWR</fullName>
                    <label>Child Welfare Referral</label>
                </value>
                <value>
                    <fullName>TAN</fullName>
                    <label>Colorado Works Referral</label>
                </value>
                <value>
                    <fullName>TFR</fullName>
                    <label>County Transfer at Redetermination</label>
                </value>
                <value>
                    <fullName>RAP</fullName>
                    <label>Reapply</label>
                </value>
                <value>
                    <fullName>AAR</fullName>
                    <label>Redetermination &amp; Verification Returned</label>
                </value>
                <value>
                    <fullName>RP</fullName>
                    <label>Reinstatement Period</label>
                </value>
                <value>
                    <fullName>WEP</fullName>
                    <label>Withdrawal within 12 month Eligibility Period</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RE194_Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Overdue__c</fullName>
        <label>Overdue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00619</valueSetName>
        </valueSet>
    </fields>

    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CHATSR</fullName>
                    <label>Recovery</label>
                </value>
                <value>
                    <fullName>CHATSI</fullName>
                    <label>Issuance</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RE226_Payment_Type__c</fullName>
        <label>RE226 Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_Payment_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Activity_Name__c</fullName>
        <label>Activity Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00851</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_Transaction_Status__c</fullName>
        <label>Attendance-Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Void</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Parent Approved</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Parent Pending</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Parent Pending (These are for records in SAF - Store in forward)</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Parent Rejected</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attendance_Transaction_Type__c</fullName>
        <label>Attendance-Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <label>Void</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>Check In</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Check Out</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Previous Check In</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>Previous Check Out</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referral_Type__c</fullName>
        <label>Referral Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Referral</fullName>
                </value>
                <value>
                    <fullName>Change Referral</fullName>
                </value>
                <value>
                    <fullName>Transition Referral</fullName>
                </value>
                <value>
                    <fullName>Closure Referral</fullName>
                </value>
                <value>
                    <fullName>Renewal Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Mode__c</fullName>
        <label>Case Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00358</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <label>Case Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00357</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Care_Level__c</fullName>
        <label>Care Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00750</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FA_Status__c</fullName>
        <label>FA Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00703</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <label>Program Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00853</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Program_Type_without_TTANF__c</fullName>
        <label>Program Type without TTANF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00854</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Type__c</fullName>
        <label>Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RT_FAC_TYPE</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>R00219__c</fullName>
        <label>R00219</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00219</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>R00335__c</fullName>
        <label>R00335</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00335</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>R00369__c</fullName>
        <label>R00369</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00369</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Subject__c</fullName>
        <label>Task Subject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Task_Subject</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RE225_Case_Mode__c</fullName>
        <label>RE225 Case Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Case_Mode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RE701_Provider_Type__c</fullName>
        <label>RE701 Provider Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00852</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restricted_Adjustment_Status__c</fullName>
        <label>Restricted_Adjustment_Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>In Process</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Restricted_Adjustment_Type__c</fullName>
        <label>Restricted Adjustment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>Claim</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>Recovery</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provider_Note_Type__c</fullName>
        <label>Provider Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00695</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_Care__c</fullName>
        <label>Location of Care</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00856</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Type__c</fullName>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Rate_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>RE209_Correspondence_Names__c</fullName>
        <label>RE209 Correspondence Names</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CR202</fullName>
                    <label>CR202 – Tax Intercept Notice</label>
                </value>
                <value>
                    <fullName>CR206</fullName>
                    <label>CR206 – Notice of Established Recovery</label>
                </value>
                <value>
                    <fullName>CR208</fullName>
                    <label>CR208 – Statement of Recovery</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RE206_Application_Status__c</fullName>
        <label>RE206 Application Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Waitlist_Enrollment_Freeze_Status__c</fullName>
        <label>Waitlist/Enrollment Freeze Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00754</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complaint_Recipient_Type__c</fullName>
        <label>Complaint Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00901</valueSetName>
        </valueSet>
    </fields>
    <label>Field Utility</label>
    <nameField>
        <label>Picklist Fields Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Utilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>